# wrpc

./: .gitignore  CMakeLists.txt
PySources/: CMakeLists.txt  pymodule.cpp
Sources/: CMakeLists.txt  FunctionsC.c  FunctionsC.h  Info.h  SetterGetter.cpp  SetterGetter.h  main.cpp  wrpc.c  wrpc.h
Tests/: CMakeLists.txt  main.cpp
